# trufont

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  COPYRIGHT  INSTALL.md  INSTALL.txt  LICENSE.GPLv3  LICENSE.LGPLv2.1  LICENSE.LGPLv3  LICENSE.txt  LICENSING.md  MANIFEST.in  README.md  README.rst  TESTING.md  THANKS  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  trufont
Lib/: TruFont.spec  build.sh
Lib/defconQt/: LayerSetList.py  __init__.py  __main__.py  addAnchorDialog.py  addComponentDialog.py  addLayerDialog.py  anchorItem.py  baseCodeEditor.py  charmap.py  componentItem.py  displayStyleSettings.py  featureTextEditor.py  fontInfo.py  fontView.py  fontView.qrc  fontinfo.py  genericSettings.py  glyphCollectionView.py  glyphScene.py  glyphView.py  glyphView_ng.py  groupsView.py  handleLineItem.py  icons_db.py  icons_db.qrc  layerActionsDialog.py  layerSetList.py  mainGfxWindow.py  metricsWindow.py  offCurvePointItem.py  onCurvePointItem.py  scriptingWindow.py  spaceCenter.py  spacecenter.py  startPointItem.py  svgViewer.py  syntaxhighlighter.py  test.py  translations.pro  vGuidelinesTextItem.py
Lib/defconQt/controls/: baseCodeEditor.py  colorVignette.py  featureCodeEditor.py  glyphCellView.py  glyphCellView_ex.py  glyphContextView.py  glyphLineView.py  glyphNameComboBox.py  glyphSequenceEdit.py  glyphView.py  listView.py  roundedButtonSet.py
Lib/trufont/: __main__.py  baseCodeEditor.py  featureTextEditor.py  fontInfo.py  fontView.py  glyphCollectionView.py  icons_db.py  metricsWindow.py  scriptingWindow.py
docs/: undo.md
src/trufont/: __main__.py
tests/defconQt/: fontInfo_test.py
tests/trufont/: fontInfoWindow_test.py
(+288 files in other folders)
