[metadata]
name = trufont
description = TruFont, a modular and cross-platform font editor.
long_description = file: README.rst
url = http://trufont.github.io
author = Adrien Tétar
author_email = adri-from-59@hotmail.fr
license = GNU LGPL v3/GNU GPL v3
platforms = Linux, Win32, Mac OS X
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
    Topic :: Text Processing :: Fonts

[options]
package_dir = =Lib
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
    wheel
install_requires =
    booleanOperations >= 0.7.0
    defcon >= 0.6.0
    fonttools[unicode,ufo,lxml,woff] >= 4.0.0
    hsluv >= 0.0.2
    pyqt5 >= 5.5.0
    ufo-extractor >= 0.3.0
    ufo2ft >= 0.5.3

[options.packages.find]
where = Lib

[options.entry_points]
gui_scripts =
    trufont = trufont.__main__:main

[bdist_wheel]
universal = 0

[sdist]
formats = zip

[flake8]
ignore = E203, W503, E501, B009, B010, B305, B006, B008
max-line-length = 88
# max-complexity should be 10
max-complexity = 45
exclude = .git,icons_db.py

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
